--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "buildCommand": "cd frontend && npm install --legacy-peer-deps && npm run build",
-  "outputDirectory": "frontend/build",
-  "installCommand": "cd frontend && npm install --legacy-peer-deps",
-  "rootDirectory": "frontend"
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
+  "outputDirectory": "build"
 }
